update doc formatting

--- a/stepmania/README-FIRST.html
+++ b/stepmania/README-FIRST.html
@@ -6,8 +6,9 @@
 
 <body>
 
-<p><font face="Courier New" size="2">StepMania X.X<br>
-&copy;2001-2003, StepMania team, All rights reserved.<br>
+<h1><font face="Courier New" size="2">StepMania X.X Readme</font></h1>
+
+<p><font face="Courier New" size="2">&copy;2001-2003, StepMania team, All rights reserved.<br>
 <a href="http://www.stepmania.com">http://www.stepmania.com</a></font></p>
 <p>
 <hr>
