--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -153,24 +153,24 @@ acceleration isn't available&quot;.</b></font></H3>
 <H3 onClick="expandIt(el9); return false" CLASS="outline">
 <font face="Arial" size="2"><b>How do I run StepMania on my Xbox?</b></font></H3>
 <DIV ID="el9" CLASS="hiddentext">
-<font face="Arial" size="2">For legal reasons, we cannot distribute an executable of StepMania for 
-	Xbox.&nbsp; In order to use this version, you'll have to compile the game for 
-	Xbox on your own.&nbsp; You'll need the Xbox Development Kit in order to 
-	compile.&nbsp; The XDK is not free software, and you'll have to obtain it on your 
-	own.<br>
+<font face="Arial" size="2">For legal reasons, we cannot distribute an 
+executable of StepMania for Xbox.&nbsp; Someone in the #xbins channel on EFnet 
+may be able to help you.&nbsp; See the <a href="http://www.xbins.org/">Xbins web 
+site</a> for more information.<br>
 &nbsp;</font></DIV>
 
-<H3 onClick="expandIt(el10); return false" CLASS="outline">
+<H3 onClick="expandIt(e20); return false" CLASS="outline">
 <font face="Arial" size="2"><b>I can't press more than 2 keys simultaneously.&nbsp; How do I fix this?</b></font></H3>
-<DIV ID="el10" CLASS="hiddentext">
+<DIV ID="e20" CLASS="hiddentext">
 <font face="Arial" size="2">This is a hardware limitation of nearly every keyboard - both PS2 and 
 	USB.&nbsp; See
 	<a style="color: #B30000; font-weight: bold; text-decoration: none" href="http://www.dribin.org/dave/keyboard/html/">
 	here</a> for more info.<br>
 &nbsp;</font></DIV>
-<H3 onClick="expandIt(el11); return false" CLASS="outline">
-<font face="Arial" size="2"><b>Problem:&nbsp; Joysticks don't work in the Linux version.</b></font></H3>
-<DIV ID="el11" CLASS="hiddentext">
+
+<H3 onClick="expandIt(e21); return false" CLASS="outline">
+<font face="Arial" size="2"><b>Joysticks don't work in the Linux version.</b></font></H3>
+<DIV ID="e21" CLASS="hiddentext">
 <p><font face="Arial" size="2">Some notes courtesy of Aaron VonderHaar:</font></p>
 <ul style="text-align: justify; margin-top: 0; margin-bottom: 0; padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 10px">
 	<li><font face="Arial" size="2">Depending on SDL compile-time options, it may only be looking for 
@@ -181,7 +181,24 @@ acceleration isn't available&quot;.</b></font></H3>
 	loaded.</font></li>
 	<li><font face="Arial" size="2">There are latency issues with the parallel port joystick driver.</font></li>
 </ul>
+</DIV>
 
+<H3 onClick="expandIt(e22); return false" CLASS="outline">
+<font face="Arial" size="2"><b>When I run under RedHat 9, I get the error 
+&quot;libmad.so.0 is missing&quot;</b></font></H3>
+<DIV ID="e22" CLASS="hiddentext">
+<p><font face="Arial" size="2">You can get the libmad RPM for RedHat 9
+<a href="http://ftp.freshrpms.net/pub/freshrpms/redhat/9/libmad/">here</a>.</font></p>
+</DIV>
+
+<H3 onClick="expandIt(e23); return false" CLASS="outline">
+<font face="Arial" size="2"><b>When I run under Linux, I get the error 
+&quot;SDL 1.2.6 is required&quot;</b></font></H3>
+<DIV ID="e23" CLASS="hiddentext">
+<p><font face="Arial" size="2">RedHat and Mandrake users can get the RPM
+<a href="http://www.libsdl.org/release/SDL-1.2.6-1.i386.rpm">here</a>.&nbsp; If 
+you're trying to compile StepMania, you can get the SDL-devel RPM
+<a href="http://www.libsdl.org/release/SDL-devel-1.2.6-1.i386.rpm">here</a>.</font></p>
 </DIV>
 
 </body>
