--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -151,11 +151,12 @@ acceleration isn't available&quot;.</b></font></H3>
 &nbsp;</font></DIV>
 
 <H3 onClick="expandIt(el9); return false" CLASS="outline">
-<font face="Arial" size="2"><b>How do I run StepMania on my Xbox?</b></font></H3>
+<font face="Arial" size="2"><b>How do I run StepMania on an Xbox?</b></font></H3>
 <DIV ID="el9" CLASS="hiddentext">
-<font face="Arial" size="2">For legal reasons, we cannot distribute an 
-executable of StepMania for Xbox.&nbsp; Someone in the #xbins channel on EFnet 
-may be able to help you.&nbsp; See the <a href="http://www.xbins.org/">Xbins web 
+<font face="Arial" size="2">StepMania will only run on a
+<a href="http://www.xbox-scene.org">mod-chipped Xbox</a>.&nbsp; For legal reasons, we cannot distribute an 
+executable of StepMania for Xbox.&nbsp; See the the #xbins channel on EFnet or 
+the <a href="http://www.xbins.org/">Xbins web 
 site</a> for more information.<br>
 &nbsp;</font></DIV>
 
