--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -202,6 +202,24 @@ you're trying to compile StepMania, you can get the SDL-devel RPM
 <a href="http://www.libsdl.org/release/SDL-devel-1.2.6-1.i386.rpm">here</a>.</font></p>
 </DIV>
 
+<H3 onClick="expandIt(e24); return false" CLASS="outline">
+<font face="Arial" size="2"><b>StepMania skips a lot when I play.&nbsp; How do I 
+fix this?</b></font></H3>
+<DIV ID="e24" CLASS="hiddentext">
+<p><font face="Arial" size="2">Here are some things to try:</font></p>
+<ul>
+  <li><font face="Arial" size="2">Close all open programs. If you have icons in 
+  the system tray, then something is still running!</font></li>
+  <li><font face="Arial" size="2">Upgrade to the latest version of StepMania.</font></li>
+  <li><font face="Arial" size="2">In Data\StepMania.ini, set &quot;Logging=0&quot;. This 
+  will stop the game from writing to the disk during gameplay.</font></li>
+  <li><font face="Arial" size="2">Force use of the the Direct3D renderer: in 
+  Data\StepMania.ini, set &quot;VideoRenderers=d3d&quot;</font></li>
+  <li><font face="Arial" size="2">Switch to the Null sound driver: in Data\StepMania.ini, 
+  set &quot;SoundDrivers=null&quot;</font></li>
+</ul>
+</DIV>
+
 </body>
 
 </html>
