--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>StepMania FAQ</title>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
 <!-- // hide from old browsers
 
