--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>StepMania FAQ</title>
+<title>New Page 1</title>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
 <!-- // hide from old browsers
 
@@ -166,7 +166,8 @@ site</a> for more information.<br>
 <font face="Arial" size="2">This is a hardware limitation of nearly every keyboard - both PS2 and 
 	USB.&nbsp; See
 	<a style="color: #B30000; font-weight: bold; text-decoration: none" href="http://www.dribin.org/dave/keyboard/html/">
-	here</a> for more info.<br>
+	here</a> for more info.&nbsp; In some cases, you can get around this by 
+carefully choosing which keys you map.<br>
 &nbsp;</font></DIV>
 
 <H3 onClick="expandIt(e21); return false" CLASS="outline">
@@ -200,24 +201,6 @@ site</a> for more information.<br>
 <a href="http://www.libsdl.org/release/SDL-1.2.6-1.i386.rpm">here</a>.&nbsp; If 
 you're trying to compile StepMania, you can get the SDL-devel RPM
 <a href="http://www.libsdl.org/release/SDL-devel-1.2.6-1.i386.rpm">here</a>.</font></p>
-</DIV>
-
-<H3 onClick="expandIt(e24); return false" CLASS="outline">
-<font face="Arial" size="2"><b>StepMania skips a lot when I play.&nbsp; How do I 
-fix this?</b></font></H3>
-<DIV ID="e24" CLASS="hiddentext">
-<p><font face="Arial" size="2">Here are some things to try:</font></p>
-<ul>
-  <li><font face="Arial" size="2">Close all open programs. If you have icons in 
-  the system tray, then something is still running!</font></li>
-  <li><font face="Arial" size="2">Upgrade to the latest version of StepMania.</font></li>
-  <li><font face="Arial" size="2">In Data\StepMania.ini, set &quot;Logging=0&quot;. This 
-  will stop the game from writing to the disk during gameplay.</font></li>
-  <li><font face="Arial" size="2">Force use of the the Direct3D renderer: in 
-  Data\StepMania.ini, set &quot;VideoRenderers=d3d&quot;</font></li>
-  <li><font face="Arial" size="2">Switch to the Null sound driver: in Data\StepMania.ini, 
-  set &quot;SoundDrivers=null&quot;</font></li>
-</ul>
 </DIV>
 
 </body>
