add FAQ item about CoinMode

--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -203,6 +203,15 @@ you're trying to compile StepMania, you can get the SDL-devel RPM
 <a href="http://www.libsdl.org/release/SDL-devel-1.2.6-1.i386.rpm">here</a>.</font></p>
 </DIV>
 
+<H3 onClick="expandIt(e24); return false" CLASS="outline">
+<font face="Arial" size="2">I changed the CoinMode setting to &quot;Pay&quot;, but now I 
+can't get back into the options menu.</font></H3>
+<DIV ID="e24" CLASS="hiddentext">
+<p><font face="Arial" size="2">You can press F3 at any time during the attract 
+screens to toggle the CoinMode setting.&nbsp; This will let you switch back to 
+CoinMode &quot;Home&quot; and get into the options menu.</font></p>
+</DIV>
+
 </body>
 
 </html>
