added a comment about the Operator's Menu key to the CoinMode FAQ item.

--- a/stepmania/FAQ.html
+++ b/stepmania/FAQ.html
@@ -209,7 +209,9 @@ can't get back into the options menu.</font></H3>
 <DIV ID="e24" CLASS="hiddentext">
 <p><font face="Arial" size="2">You can press F3 at any time during the attract 
 screens to toggle the CoinMode setting.&nbsp; This will let you switch back to 
-CoinMode &quot;Home&quot; and get into the options menu.</font></p>
+CoinMode &quot;Home&quot; and get into the options menu. You can also use the operator key
+(default is scroll lock, but can be changed in the key mapping screen) to jump directly
+into the options menu.</font></p>
 </DIV>
 
 </body>
