update controls in readme

--- a/stepmania/README-FIRST.html
+++ b/stepmania/README-FIRST.html
@@ -128,12 +128,13 @@ are on right half.<br>
 The following is a list of special keys:<br>
 <br>
 Any time:<br>
-* F1 = insert coin for player 1<br>
-* F2 = insert coin for player 2<br>
+* F1 = insert coin<br>
+* F2 = reload metrics and textures<br>
 * Alt-Enter or F4 = toggle fullscreen<br>
-* F5 = take screenshot (saves to program directory as &quot;screenNNNN.bmp&quot;)<br>
-* Hold Tab = increase game speed 4x (useful for moving through menus quickly)<br>
-* Hold Tilde (~) = decrease game speed to 1/4x<br>
+* PrintScreen = take screenshot (saves to program directory as &quot;Screenshots\screenNNNN.bmp&quot;)<br>
+* Hold Tab = increase game speed by 4x (useful for moving through menus quickly)<br>
+* Hold Tilde (~) = decrease game speed by 1/4x<br>
+* Hold Tab and Tilde (~) = decrease game speed to 0x<br>
 <br>
 In menus:<br>
 * Arrow keys navigate menus<br>
