update readme link

--- a/stepmania/README-FIRST.html
+++ b/stepmania/README-FIRST.html
@@ -1247,8 +1247,7 @@ options is sufficient.<br>
 * Step 2: Install the Direct X 8.1 SDK<br>
 <br>
 The DirectX 8.1 SDK is a
-<a href="http://msdn.microsoft.com/downloads/?url=/downloads/sample.asp?url=/MSDN-FILES/027/001/771/msdncompositedoc.xml&frame=true">
-free download</a> from Microsoft. Install it using all the default settings. The
+<a href="http://www.microsoft.com/downloads/details.aspx?displaylang=en&FamilyID=DA65CA82-0AE9-412A-B278-7C0AFC0D5974">free download</a> from Microsoft. Install it using all the default settings. The
 SDK installer will configure Visual C++ with the correct paths needed to find
 the DirectX 8.1 libraries and headers.<br>
 <br>
