--- a/stepmania/README-FIRST.html
+++ b/stepmania/README-FIRST.html
@@ -130,7 +130,7 @@ The following is a list of special keys:<br>
 Any time:<br>
 * F1 = insert coin<br>
 * F2 = reload metrics and textures<br>
-* Alt-Enter or F4 = toggle fullscreen<br>
+* Alt-Enter = toggle fullscreen<br>
 * PrintScreen = take screenshot (saves to program directory as &quot;Screenshots\screenNNNN.bmp&quot;)<br>
 * Hold Tab = increase game speed by 4x (useful for moving through menus quickly)<br>
 * Hold Tilde (~) = decrease game speed by 1/4x<br>
