--- a/stepmania/README-FIRST.html
+++ b/stepmania/README-FIRST.html
@@ -432,9 +432,9 @@ Any text field in an SM file can contain UTF-8 characters.<br>
 #SUBTITLE:...; - This text will appear underneath the main title of the song on
 the Select Music screen. e.g. &quot;~Dirty Mix~&quot; or &quot;(remix)&quot;.<br>
 #ARTIST:...; - The artist of the song.<br>
-#TITLETRANSLIT:...; - Transliteration of song's main title for sorting<br>
-#SUBTITLETRANSLIT:...; - Transliteration of song's sub title for sorting<br>
-#ARTISTTRANSLIT:...; - Transliteration of the artist of the song<br>
+#TITLETRANSLIT:...; - Transliteration of song's main title.<br>
+#SUBTITLETRANSLIT:...; - Transliteration of song's subtitle.<br>
+#ARTISTTRANSLIT:...; - Transliteration of the artist's name.<br>
 #CREDIT:...; - Give yourself some credit here for creating a wonderful song.<br>
 #BANNER:...; - The file name of the banner image. e.g. &quot;b4u-banner.png&quot;. This
 image must reside in the song folder.<br>
