small manual updates

--- a/Manual/index.html
+++ b/Manual/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>sm-ssc Manual</title>
+<title>StepMania 5 Manual</title>
 <link rel="stylesheet" type="text/css" media="screen" href="./data/style.css" />
 </head>
 <body>
 <div id="logoDiv">
-	<h1><img src="./data/logo.png" alt="sm-ssc:"><br/>The Manual</h1>
+	<h1><img src="./data/logo.png" alt="StepMania 5:"><br/>The Manual</h1>
 </div>
 <hr/>
 <div id="tocDiv">
@@ -14,7 +14,7 @@
 		<li><a href="#intro">Introduction</a></li>
 	</ol>
 	<ol class="tocList">
-		<li><a href="#welcome">Welcome to sm-ssc</a></li>
+		<li><a href="#welcome">Welcome to StepMania 5</a></li>
 		<ol class="tocList">
 			<li><a href="#sysreqs">System Requirements</a></li>
 			<li><a href="#install">Installation</a></li>
@@ -26,30 +26,32 @@
 <hr/>
 
 <h2><a name="intro">Introduction</a></h2>
-<p>This is the basic player manual. We should also link to the Beginner's Guide
-and Themer's Guide from here as well.</p>
+<p>This is the basic player manual. [We should also link to the Beginner's Guide
+and Themer's Guide from here as well.]</p>
 
 <hr/>
 
-<h2><a name="welcome">Welcome to sm-ssc</a></h2>
+<h2><a name="welcome">Welcome to StepMania 5</a></h2>
 
 <h3><a name="sysreqs">System Requirements</a></h2>
-<p>sm-ssc can run on this bare minimum:</p>
+<p>StepMania 5 can run on this bare minimum:</p>
 <ul>
 	<li>Operating System(s):
 		<ul>
 			<li>Windows® (2000, XP, Vista, Windows 7)</li>
 			<li>Mac OS X (10.?)</li>
 			<li>*NIX/POSIX-compliant OS (GNU/Linux, *BSD)</li>
-			<li>Microsoft® Xbox® (<em><small>The Xbox build currently does not function.</small></em>)</li>
 		</ul>
 	</li>
+	<li>256MB of RAM</li>
+	<li>Video Card</li>
+	<li>Audio Card</li>
 </ul>
 
 <p>However, we highly recommend at least these settings for decent performance:</p>
 
-<h3><a name="install">Installation</a></h2>
-<p>If you're reading this, you've likely already figured out how to install sm-ssc.
+<h3><a name="install">Installation</a></h3>
+<p>If you're reading this, you've likely already figured out how to install StepMania.
 Just in case you're reading this without having installed it yourself, however,
 here are the installation instructions for various operating systems.</p>
 
@@ -58,17 +60,17 @@ here are the installation instructions for various operating systems.</p>
 combination. The .exe installer is much easier to deal with, but in case it doesn't
 work out for you, we have provided a zip file for manual installation. The zip
 distribution can be converted into Portable mode by placing a blank Portable.ini
-inside of the sm-ssc directory.</p>
+inside of the StepMania install directory.</p>
 
 <h4>Mac OS X</h4>
-<p>The Mac version is distributed as a .dmg file; Mount it, make a sm-ssc folder
-in Applications/, then put sm-ssc in there, and make folders as needed. That
-probably isn't the best way to do it, but it is A way.</p>
+<p>The Mac version is distributed as a .dmg file; Mount it, make a StepMania folder
+in Applications/, then put StepMania 5 in there, and make folders as needed. That
+probably isn't the best way to do it, but it is _A_ way.</p>
 
 <h4>Linux</h4>
 <p>Linux users are typically expected to build from source. See <a href="http://code.google.com/p/sm-ssc/wiki/Compiling">Compiling</a>
-on the sm-ssc wiki for more information.</p>
+on the StepMania wiki for more information.</p>
 <hr/>
-<div id="footer">sm-ssc is Copyright &copy; 2009-2010 <a href="http://ssc.ajworld.net/">the Spinal Shark Collective</a>.
+<div id="footer">StepMania is copyright &copy; 2001-2011 StepMania team.
 </body>
 </html>
