should've noticed this before I pushed...

--- a/Manual/index.html
+++ b/Manual/index.html
@@ -65,7 +65,7 @@ inside of the StepMania install directory.</p>
 <h4>Mac OS X</h4>
 <p>The Mac version is distributed as a .dmg file; Mount it, make a StepMania folder
 in Applications/, then put StepMania 5 in there, and make folders as needed. That
-probably isn't the best way to do it, but it is _A_ way.</p>
+probably isn't the best way to do it, but it is <strong><em>A</em></strong> way.</p>
 
 <h4>Linux</h4>
 <p>Linux users are typically expected to build from source. See <a href="http://code.google.com/p/sm-ssc/wiki/Compiling">Compiling</a>
