small manual changes

--- a/Manual/index.html
+++ b/Manual/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="logoDiv">
-	<h1><img src="./data/logo.png" alt="StepMania 5:"><br/>The Manual</h1>
+	<h1><img src="./data/logo.png" alt="StepMania 5:" title="StepMania"><br/>The Manual</h1>
 </div>
 <hr/>
 <div id="tocDiv">
@@ -30,11 +30,11 @@
 			<li>
 				<a href="#content">Creating Content</a>
 				<ol class="tocList">
-					<li>Announcers</li>
-					<li>Courses</li>
-					<li>Noteskins</li>
-					<li>BGAnimations</li>
-					<li>Themes</li>
+					<li><a href="#announcer">Announcers</a></li>
+					<li><a href="#course">Courses</a></li>
+					<li><a href="#noteskin">Noteskins</a></li>
+					<li><a href="#bganim">BGAnimations</a></li>
+					<li><a href="#theme">Themes</a></li>
 				</ol>
 			</li>
 		</ol>
@@ -120,6 +120,21 @@ and KSF formats, put all the files in the song's folder.</p>
 <hr/>
 
 <h3><a name="songeditor">Song Editor</a></h3>
+<hr/>
+
+<h3><a name="content">Creating Content</a></h3>
+
+<h4><a name="announcer">Announcers</a></h4>
+
+<h4><a name="course">Courses</a></h4>
+
+<h4><a name="noteskin">Noteskins</a></h4>
+
+<h4><a name="bganim">BGAnimations</a></h4>
+
+<h4><a name="theme">Themes</a></h4>
+<p>StepMania themes consist of various files and folders. The most important file
+is <code>metrics.ini</code>, which controls the entire theme.</p>
 
 <hr/>
 <div id="footer">StepMania is copyright &copy; 2001-2011 StepMania team.
