small updates. this should really be worked on at some point.

--- a/Manual/index.html
+++ b/Manual/index.html
@@ -123,20 +123,31 @@ and KSF formats, put all the files in the song's folder.</p>
 <hr/>
 
 <h3><a name="content">Creating Content</a></h3>
+<p>If you feel like making custom content for StepMania (that isn't a song),
+there's lots of options.</p>
 
 <h4><a name="announcer">Announcers</a></h4>
 
 <h4><a name="course">Courses</a></h4>
+<p>Course files use the <code>.crs</code> format.</p>
 
 <h4><a name="noteskin">Noteskins</a></h4>
+<p>NoteSkins are the shapes of the notes during gameplay. Each game type has its own
+folder for noteskins, e.g. <code>dance/</code>,<code>pump/</code>. The game looks for
+a noteskin called <code>default</code> in each of the game directories. If it finds
+one, it will enable the gametype.</p>
+<p>NoteSkins consist of three parts: the metrics (<code>metrics.ini</code>), the Lua
+script (<code>NoteSkin.lua</code>), and the various files for the noteskin (graphics, etc.).</p>
 
 <h4><a name="bganim">BGAnimations</a></h4>
 
 <h4><a name="theme">Themes</a></h4>
 <p>StepMania themes consist of various files and folders. The most important file
 is <code>metrics.ini</code>, which controls the entire theme.</p>
+<p>The <a href="http://kki.ajworld.net/wiki/Main_Page">StepMania Theming Wiki</a>
+is a good source of information on theming for StepMania.</p>
 
 <hr/>
-<div id="footer">StepMania is copyright &copy; 2001-2011 StepMania team.
+<div id="footer">StepMania is copyright &copy; 2001-2012 StepMania team.
 </body>
 </html>
